--- a/app/views/ad_units/_ad_skyscraper.html.erb
+++ b/app/views/ad_units/_ad_skyscraper.html.erb
@@ -1,13 +1,13 @@
 <div class='adsense-tower adsense-tower--<%= side %>'>
 
-<% if Rails.env.production? %>
+<% if true || Rails.env.production? %>
   <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <!-- Game Page -->
     <ins class="adsbygoogle"
          style="display:inline-block;width:300px;height:600px"
          data-ad-client="ca-pub-9909143434790892"
          data-ad-slot="<%= ad_slot %>"></ins>
-
+    <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
 <% else %>
     <div style='display:inline-block;width:300px;height:600px;background-color:#cecece;'>
         Ad space.  Shown for dev and staging.
