--- a/app/views/ad_units/_ad_wide.html.erb
+++ b/app/views/ad_units/_ad_wide.html.erb
@@ -5,6 +5,7 @@
          style="display:inline-block;width:728px;height:90px"
          data-ad-client="ca-pub-9909143434790892"
          data-ad-slot="<%= ad_slot %>"></ins>
+    <script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
 <% else %>
     <div style='display:inline-block;width:728px;height:90px;background-color:#cecece;'>
         Ad space.  Shown for dev and staging.
